--- a/index.html
+++ b/index.html
@@ -5,11 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Lumi Novry M</title>
+    <!-- CSS Costum -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- Font Robot -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <!-- Font Lobster -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
     
+    <!-- navbar -->
+    <div class="navbar">
+        <p>Lumi Novry M</p>
 
+        <div class="nav-link">
+            <div><a href="http://">Home</a></div>
+            <div><a href="http://">About</a></div>
+            <div><a href="http://">Contact Us</a></div>
+            <div><a href="http://">Team</a></div>
+        </div>
+    </div>
 
 </body>
 </html>
