--- a/index.html
+++ b/index.html
@@ -18,17 +18,32 @@
 </head>
 <body>
     
-    <!-- navbar -->
-    <div class="navbar">
-        <p>Lumi Novry M</p>
 
-        <div class="nav-link">
-            <div><a href="http://">Home</a></div>
-            <div><a href="http://">About</a></div>
-            <div><a href="http://">Contact Us</a></div>
-            <div><a href="http://">Team</a></div>
+    <div class="container">
+        <!-- navbar -->
+        <div class="navbar">
+            <p>Lumi Novry M</p>
+
+            <div class="nav-link">
+                <div><a href="http://">Home</a></div>
+                <div><a href="http://">About</a></div>
+                <div><a href="http://">Contact Us</a></div>
+                <div><a href="http://">Team</a></div>
+            </div>
         </div>
     </div>
+
+    <!-- Hero Image -->
+    <div class="text-hero">
+        <p>Hello,</p>
+        <p>I'M Lumi Novry</p>
+        <p>Freelancing with Designer <br> & Developer</p>
+
+        <button class="btn-here">Here Me</button>
+        <button class="btn-download">Download CV</button>
+    </div>
+
+    <img src="img/model.png" alt="" class="model">
 
 </body>
 </html>
