--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Font Robot -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:ital,wght@0,400;0,500;1,300&display=swap" rel="stylesheet">
     <!-- Font Lobster -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,6 +44,21 @@
     </div>
 
     <img src="img/model.png" alt="" class="model">
+
+    <!-- About -->
+
+    <div class="about">
+        <img src="img/about-img.png" alt="Gambar About">
+
+        <div class="text-about">
+            <p>About Me</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, tenetur! Aperiam dolorum quo quisquam dolor, earum incidunt placeat dicta rerum itaque odio? Ex et expedita pariatur tempora eum aspernatur recusandae!</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet deserunt delectus facere expedita quo sint cumque aspernatur laudantium distinctio doloremque.</p>
+
+            <button class="btn-about-here">Here Me</button>
+            <button class="btn-about-download">Download CV</button>
+        </div>
+    </div>
 
 </body>
 </html>
