--- a/index.html
+++ b/index.html
@@ -60,5 +60,37 @@
         </div>
     </div>
 
+    <!-- Skills -->
+
+    <div class="text-skills">
+        <p>Skills</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas harum in iure repudiandae voluptate explicabo aut minima possimus quae ex mollitia id dolorem a at maiores voluptatum, dolorum fuga ratione.</p>
+    </div>
+
+    <div class="card-skills">
+        <div class="skill-1">
+            <div>1</div>
+            <p>Web Development</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed porro saepe repellendus? Dolorem, recusandae porro!</p>
+
+            <button>More...</button>
+        </div>
+        <div class="skill-2">
+            <div>2</div>
+            <p>Web Development</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed porro saepe repellendus? Dolorem, recusandae porro!</p>
+
+            <button>More...</button>
+        </div>
+        <div class="skill-3">
+            <div>3</div>
+            <p>Web Development</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed porro saepe repellendus? Dolorem, recusandae porro!</p>
+
+            <button>More...</button>
+        </div>
+    </div>
+
 </body>
 </html>
