--- a/index.html
+++ b/index.html
@@ -92,5 +92,26 @@
         </div>
     </div>
 
+    <!-- Contact -->
+    <div class="contact">
+        <p>What project in your mind?</p>
+        <div class="garis"></div>
+        <button>Contact Me</button>
+    </div>
+
+
+    <!-- Footer -->
+    <div class="footer">
+        <p>Going-To Internet</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, illum ex saepe veritatis necessitatibus ut aliquam quasi consequuntur veniam pariatur laboriosam, odit voluptatem ad unde sint perferendis totam rem mollitia?</p>
+
+        <div class="list-icon">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>4</div>
+        </div>
+    </div>
+
 </body>
 </html>
