--- a/index.html
+++ b/index.html
@@ -106,12 +106,16 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, illum ex saepe veritatis necessitatibus ut aliquam quasi consequuntur veniam pariatur laboriosam, odit voluptatem ad unde sint perferendis totam rem mollitia?</p>
 
         <div class="list-icon">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-            <div>4</div>
+            <div><ion-icon name="logo-twitter"></ion-icon></div>
+            <div><ion-icon name="logo-facebook"></ion-icon></div>
+            <div><ion-icon name="logo-instagram"></ion-icon></div>
+            <div><ion-icon name="logo-linkedin"></ion-icon></div>
         </div>
     </div>
+
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </body>
 </html>
